--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -110,10 +110,58 @@
             </p>
           </ul>
         </div>
+
+        <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
+            Pronto para testar<br />
+            seu conhecimento?
+          </p>
+          <p class="text-introductionToDataModeling">
+            Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
+            se preocupe pois a questão serve apenas para testar seu conhecimento
+            sobre este módulo!
+          </p>
+          <br />
+          <p class="text-introductionToDataModeling"> A construção de uma base de dados eficiente requer cuidados para evitar problemas no futuro. Qual é uma prática recomendada para alcançar esse objetivo?</p>
+
+          <form class="form-introductionToDataModeling">
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-A">
+                <p class="text-introductionToDataModeling">
+                   Garantir que os dados sejam armazenados de forma não redundante e estejam normalizados para evitar inconsistências.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
+              <label for="question1-B">
+                <p class="text-introductionToDataModeling">
+                  Utilizar o maior número de tabelas possíveis, mesmo que contenham informações repetidas.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-C">
+                <p class="text-introductionToDataModeling">
+                  Priorizar a performance do sistema sem considerar a estrutura dos dados.
+                </p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
+              </label>
+            </div>
+            <input type="button" value="Mostrar as respostas" class="submit" id="submit">
+          </form>
+        </div>
+
         <div class="text-DB">
           <a href="../index.html">Voltar para tela de cards!</a>
         </div>
       </div>      
     </div>
   </body>
+  <script src="../javascript/howToBuildEfficientDB.js"></script>
 </html>
