--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -94,12 +94,54 @@
 de bolinhas conectadas à linhas com as entidades. Se a bolinha estiver pintada, significa que ela é um atributo identificador, algo único em cada entidade (id).
 Por fim, os relacionamentos são representados em forma de losango conectado atraves de linhas com as entidades, conforme o exemplo abaixo:
  <img src="../assets/attribute.png" class="text-img">
-              
             </p>
-     
           </div>
 
+          <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
+            Pronto para testar<br />
+            seu conhecimento?
+          </p>
+          <p class="text-introductionToDataModeling">
+            Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
+            se preocupe pois a questão serve apenas para testar seu conhecimento
+            sobre este módulo!
+          </p>
+          <br />
+          <p class="text-introductionToDataModeling">A modelagem de dados segue uma série de etapas para garantir que o sistema seja bem estruturado e eficiente. Qual das opções descreve corretamente uma etapa essencial desse processo?</p>
 
+          <form class="form-introductionToDataModeling">
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-A">
+                <p class="text-introductionToDataModeling">
+                  O uso de ferramentas de design para criar interfaces de usuário.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
+              <label for="question1-B">
+                <p class="text-introductionToDataModeling">
+                  A identificação de entidades, definição de relacionamentos e criação de modelos lógicos e físicos.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-C">
+                <p class="text-introductionToDataModeling">
+                  A implementação direta do banco de dados sem análise de requisitos.
+                </p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
+              </label>
+            </div>
+            <input type="button" value="Mostrar as respostas" class="submit" id="submit">
+          </form>
+        </div>
 
           <div class="text">
             <a href="../index.html">Voltar para tela de cards!</a>
@@ -109,4 +151,5 @@ Por fim, os relacionamentos são representados em forma de losango conectado atr
     </div>
 
   </body>
+  <script src="../javascript/howToModelData.js"></script>
 </html>
