--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -140,10 +140,58 @@ De onde vem? Para onde vai?
             </p>
           </div>
 
+                    <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
+            Pronto para testar<br />
+            seu conhecimento?
+          </p>
+          <p class="text-introductionToDataModeling">
+            Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
+            se preocupe pois a questão serve apenas para testar seu conhecimento
+            sobre este módulo!
+          </p>
+          <br />
+          <p class="text-introductionToDataModeling"> Para modelar dados de maneira eficaz, é necessário seguir uma sequência lógica de passos. Qual é o primeiro passo no processo de modelagem de dados?</p>
+
+          <form class="form-introductionToDataModeling">
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-A">
+                <p class="text-introductionToDataModeling">
+                   Definir as tabelas do banco de dados e os tipos de índice que serão usados.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
+              <label for="question1-B">
+                <p class="text-introductionToDataModeling">
+                    Compreender o domínio de aplicação e levantar os requisitos, identificando as necessidades de informação e as entidades envolvidas. (Resposta correta)
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-C">
+                <p class="text-introductionToDataModeling">
+                   Implementar o banco de dados diretamente no Sistema de Gerenciamento de Banco de Dados (SGBD)
+                </p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
+              </label>
+            </div>
+            <input type="button" value="Mostrar as respostas" class="submit" id="submit">
+          </form>
+        </div>
+
           <div class="text-mainStepsToDataModeling">
             <a href="../index.html">Voltar para tela de cards!</a>
           </div>
 
     </div>
   </body>
+
+  <script src="../javascript/mainStepsToDataModeling.js"></script>
 </html>
