--- a/html/modelDataNotations.html
+++ b/html/modelDataNotations.html
@@ -62,10 +62,57 @@
         </p>
       </div>
 
+                <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
+            Pronto para testar<br />
+            seu conhecimento?
+          </p>
+          <p class="text-introductionToDataModeling">
+            Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
+            se preocupe pois a questão serve apenas para testar seu conhecimento
+            sobre este módulo!
+          </p>
+          <br />
+          <p class="text-introductionToDataModeling"> As notações de modelagem de dados são cruciais para representar a estrutura de um sistema de forma clara. Qual notação é a mais comumente utilizada para representar entidades e seus relacionamentos em um banco de dados?</p>
+
+          <form class="form-introductionToDataModeling">
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-A">
+                <p class="text-introductionToDataModeling">
+                  O Diagrama de Entidade-Relacionamento (DER), que permite visualizar entidades, atributos e seus relacionamentos de forma gráfica.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
+              <label for="question1-B">
+                <p class="text-introductionToDataModeling">
+                   O Diagrama de Gantt, que organiza o cronograma de um projeto.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-C">
+                <p class="text-introductionToDataModeling">
+                  O Fluxograma de Dados, que detalha o fluxo de informação em um sistema. 
+                </p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
+              </label>
+            </div>
+            <input type="button" value="Mostrar as respostas" class="submit" id="submit">
+          </form>
+        </div>
+
       <div class="text-mainStepsToDataModeling">
         <a href="../index.html">Voltar para tela de cards!</a>
       </div>
 
     </div>
   </body>
+  <script src="../javascript/modelDataNotations.js"></script>
 </html>
