--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -176,9 +176,58 @@
               </ul>
             </p>
         </div>
+
+        
+          <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
+            Pronto para testar<br />
+            seu conhecimento?
+          </p>
+          <p class="text-introductionToDataModeling">
+            Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
+            se preocupe pois a questão serve apenas para testar seu conhecimento
+            sobre este módulo!
+          </p>
+          <br />
+          <p class="text-introductionToDataModeling">Após a criação do modelo conceitual, o próximo passo é a construção do modelo lógico. O que caracteriza o modelo lógico de dados?</p>
+
+          <form class="form-introductionToDataModeling">
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-A">
+                <p class="text-introductionToDataModeling">
+                  A representação física de como os dados serão armazenados em um SGBD.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
+              <label for="question1-B">
+                <p class="text-introductionToDataModeling">
+                   A implementação direta de consultas SQL para manipular os dados.
+                </p>
+              </label>
+            </div>
+
+            <div class="radioItem-introductionToDataModeling">
+              <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
+              <label for="question1-C">
+                <p class="text-introductionToDataModeling">
+                  A transformação do modelo conceitual em um formato que possa ser implementado em um banco de dados, definindo tabelas, colunas e chaves estrangeiras. 
+                </p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
+              </label>
+            </div>
+            <input type="button" value="Mostrar as respostas" class="submit" id="submit">
+          </form>
+        </div>
+
         <div class="text-logicModel">
             <a href="../index.html">Voltar para tela de cards!</a>
           </div>
     </div>
 </body>
+<script src="../javascript/logicModel.js"></script>
 </html>
