uploading new images

--- a/html/modelDataNotations.html
+++ b/html/modelDataNotations.html
@@ -45,6 +45,7 @@
         <p class="subtitle-text-mainStepsToDataModeling">1. Notação Entidade-Relacionamento (ER)</p>
         <p class="text-mainStepsToDataModeling">
           A notação ER é uma das mais usadas para modelagem de dados. Ela representa entidades (objetos ou coisas de interesse no domínio do sistema) e os relacionamentos entre elas. As entidades são representadas por retângulos, e os relacionamentos por losangos.
+          <img src="../assets/diagramaER.png" class="text-img">
         </p>
       </div>
 
@@ -52,6 +53,7 @@
         <p class="subtitle-text-mainStepsToDataModeling">2. Notação UML</p>
         <p class="text-mainStepsToDataModeling">
           A UML é amplamente utilizada para modelar vários aspectos de sistemas, incluindo a modelagem de dados. Ela representa classes (equivalentes a entidades) e relacionamentos usando linhas que conectam as classes, com diferentes tipos de setas e marcadores que indicam os tipos de relacionamentos (como associações e dependências).
+          <img src="../assets/diagramUML.jpg" class="text-img">
         </p>
       </div>
 
